# OpenGLTerrainGenerator

./: CMakeLists.txt  README.md
PROJET_TERRAIN/: CMakeLists.txt  color_map.cpp  terrain.cpp
PROJET_TERRAIN/shaders/: sky.fs  sky.vs  terrain.fs  terrain.vs  water.fs  water.vs
easycppogl_src/: mesh_assimp_importer.cpp  test.txt
easycppogl_src/models/: mustang_GT.mtl
